# todo_graphql_django_back

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
backend/: db.sqlite3  requirements.txt
backend/todo_project/: settings.py
backend/todos/: admin.py  models.py  schema.py
backend/todos/migrations/: 0001_initial.py
