[project]
name = "todo-fullstack-full"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.8",
    "django-cors-headers>=4.9.0",
    "django-graphql-jwt>=0.4.0",
    "graphene-django>=3.2.3",
    "graphql-core>=3.2.7",
]
